# quadrata

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
quadrata/: Cargo.toml
quadrata/src/: io.rs  lib.rs  solver.rs
quadrata/src/strategies/: guess.rs  hidden_single.rs  mod.rs
src/: Grid.css  Grid.tsx  Pencil.tsx  Settings.tsx  main.tsx
