[package]
name = "quadrata"
version = "0.1.0"
authors = ["Roderick <rbovee@gmail.com>"]
license = "MIT"
description = "Sudoku function library"
repository = "https://github.com/bovee/quadrata"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
dlx-rs = "1.1.0"
js-sys = "0.3.69"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
